# sdk-load-test

./: .env.example  .gitignore  README.md  pyproject.toml  run_benchmarks.py
evals/: benchmark_evals.py  benchmark_results_evals.txt  benchmark_results_upload_data.txt  benchmark_upload.py  config.json  eval_data.py  upload_data.py
evals/data/: 10k-long-emails-example.csv
tracing/: benchmark_flat.py  benchmark_nested.py  benchmark_results_flat.txt  benchmark_results_nested.txt  download_data.py  trace_data.py
tracing/data/: processed_run_ops_1efcee40-3791-6296-a156-5207b6f9291c.jsonl  processed_run_ops_1efceec9-8695-6c1b-a4eb-eaab38afce6c.jsonl  processed_run_ops_1efceecb-b89e-6a62-8140-0d9edfbe5225.jsonl  processed_run_ops_1efceed5-37db-6423-a76f-974355024b85.jsonl  processed_run_ops_1efceee0-a5ba-6a89-b1eb-181a839b2a28.jsonl  processed_run_ops_1efcef47-59e3-6165-bac0-1a6524c25453.jsonl  processed_run_ops_1efcefe2-7fe1-6ff4-9ea8-300f343970e1.jsonl  processed_run_ops_1efcf01f-fb89-61bd-a8ba-1123f9f48458.jsonl  processed_run_ops_1efcf04a-a9ae-60a6-b899-19ba02b2c8ea.jsonl  processed_run_ops_1efcf05a-5bac-6bba-98d1-978315c98f98.jsonl  processed_run_ops_1efcf072-10ee-684d-ab63-51194ccc7955.jsonl  processed_run_ops_1efcf09b-9bcb-68e6-8cc5-da2673832877.jsonl  processed_run_ops_1efcf0be-fc26-6bee-9361-51e9631e9f99.jsonl  processed_run_ops_1efcf0cd-a49f-665b-9894-52d508078fc1.jsonl  processed_run_ops_1efcf0cf-d5e7-6b82-9635-7ee2bb254b18.jsonl  processed_run_ops_1efcf0d2-5e61-6a0d-b6d3-e9666f398dfa.jsonl  processed_run_ops_1efcf0d4-2007-6727-be94-9884ee1c0cbe.jsonl  (+12 more)
(+2 files in other folders)
